<?xml version="1.0" encoding="utf-8"?>
<TableLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:paddingLeft="10dip"
   android:paddingRight="10dip"
   android:shrinkColumns="1"
   android:stretchColumns="1">
   <TableRow
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:textColor="@color/whitesmoke"
         android:text="@string/dictionary_yomi"/>
      <EditText
         android:id="@+id/dictionary_yomi"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dip"
         android:hint="@string/dictionary_hint"
         android:inputType="text"
         android:scrollHorizontally="true"/>
   </TableRow>
   <TableRow
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:textColor="@color/whitesmoke"
         android:text="@string/dictionary_word"/>
      <EditText
         android:id="@+id/dictionary_word"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dip"
         android:hint="@string/dictionary_hint"
         android:inputType="text"
         android:scrollHorizontally="true"/>
   </TableRow>
   <TableRow
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
      <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginTop="10dip"
         android:layout_marginBottom="10dip"
         android:layout_span="2"
         android:textSize="16dp"
         android:textColor="@color/whitesmoke"
         android:text="@string/dictionary_note"/>
   </TableRow>
</TableLayout>
